// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages salesOfferPackage should render an error when errors are passed through 1`] = `
<Component
  description="Sales Offer Packages page for the Fares Data Build Tool"
  title="Sales Offer Packages - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/salesOfferPackages"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "error",
            "id": "",
          },
        ]
      }
    />
    <h1
      className="govuk-heading-xl"
    >
      How are the tickets sold - sales offer package
    </h1>
    <span
      className="govuk-hint"
      id="service-list-hint"
    >
      Select all that apply from the lists below
    </span>
    <div
      className="govuk-grid-row"
    >
      <div
        className="govuk-grid-column-two-thirds"
      >
        <FormElementWrapper
          errorClass="govuk-form-group--error"
          errorId="purchaseLocations"
          errors={
            Array [
              Object {
                "errorMessage": "error",
                "id": "",
              },
            ]
          }
        >
          <div
            className="govuk-form-group"
          >
            <fieldset
              aria-describedby="sop-purchase-locations"
              className="govuk-fieldset"
            >
              <p
                className="govuk-body"
                id="sop-purchase-locations"
              >
                Where can tickets be purchased?
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-on-board"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-0-on-board"
                  name="purchaseLocations"
                  type="checkbox"
                  value="onBoard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-0-on-board"
                >
                  On Board
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-online"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-1-online"
                  name="purchaseLocations"
                  type="checkbox"
                  value="online"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-1-online"
                >
                  Online
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-mobile-device"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-2-mobile-device"
                  name="purchaseLocations"
                  type="checkbox"
                  value="mobileDevice"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-2-mobile-device"
                >
                  Mobile Device
                </label>
              </div>
            </fieldset>
          </div>
        </FormElementWrapper>
        <FormElementWrapper
          errorClass="govuk-form-group--error"
          errorId="paymentMethods"
          errors={
            Array [
              Object {
                "errorMessage": "error",
                "id": "",
              },
            ]
          }
        >
          <div
            className="govuk-form-group"
          >
            <fieldset
              aria-describedby="sop-payment-methods"
              className="govuk-fieldset"
            >
              <p
                className="govuk-body"
                id="sop-payment-methods"
              >
                How can tickets be paid for?
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-cash"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-0-cash"
                  name="paymentMethods"
                  type="checkbox"
                  value="cash"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-0-cash"
                >
                  Cash
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-debit-card"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-1-debit-card"
                  name="paymentMethods"
                  type="checkbox"
                  value="debitCard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-1-debit-card"
                >
                  Debit Card
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-credit-card"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-2-credit-card"
                  name="paymentMethods"
                  type="checkbox"
                  value="creditCard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-2-credit-card"
                >
                  Credit Card
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-mobile-phone"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-3-mobile-phone"
                  name="paymentMethods"
                  type="checkbox"
                  value="mobilePhone"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-3-mobile-phone"
                >
                  Mobile Phone
                </label>
              </div>
            </fieldset>
          </div>
        </FormElementWrapper>
        <FormElementWrapper
          errorClass="govuk-form-group--error"
          errorId="ticketFormats"
          errors={
            Array [
              Object {
                "errorMessage": "error",
                "id": "",
              },
            ]
          }
        >
          <div
            className="govuk-form-group"
          >
            <fieldset
              aria-describedby="sales-offer-package-ticket-format"
              className="govuk-fieldset"
            >
              <p
                className="govuk-body"
              >
                What format do the tickets come in?
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-paper-ticket"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-0-paper-ticket"
                  name="ticketFormats"
                  type="checkbox"
                  value="paperTicket"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-0-paper-ticket"
                >
                  Paper Ticket
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-mobile-app"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-1-mobile-app"
                  name="ticketFormats"
                  type="checkbox"
                  value="mobileApp"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-1-mobile-app"
                >
                  Mobile App
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-smart-card"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-2-smart-card"
                  name="ticketFormats"
                  type="checkbox"
                  value="smartCard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-2-smart-card"
                >
                  Smart Card
                </label>
              </div>
            </fieldset>
          </div>
        </FormElementWrapper>
      </div>
      <div
        className="govuk-grid-column-one-third"
      >
        <Component />
      </div>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages salesOfferPackage should render correctly 1`] = `
<Component
  description="Sales Offer Packages page for the Fares Data Build Tool"
  title="Sales Offer Packages - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/salesOfferPackages"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <h1
      className="govuk-heading-xl"
    >
      How are the tickets sold - sales offer package
    </h1>
    <span
      className="govuk-hint"
      id="service-list-hint"
    >
      Select all that apply from the lists below
    </span>
    <div
      className="govuk-grid-row"
    >
      <div
        className="govuk-grid-column-two-thirds"
      >
        <FormElementWrapper
          errorClass="govuk-form-group--error"
          errorId="purchaseLocations"
          errors={Array []}
        >
          <div
            className="govuk-form-group"
          >
            <fieldset
              aria-describedby="sop-purchase-locations"
              className="govuk-fieldset"
            >
              <p
                className="govuk-body"
                id="sop-purchase-locations"
              >
                Where can tickets be purchased?
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-on-board"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-0-on-board"
                  name="purchaseLocations"
                  type="checkbox"
                  value="onBoard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-0-on-board"
                >
                  On Board
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-online"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-1-online"
                  name="purchaseLocations"
                  type="checkbox"
                  value="online"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-1-online"
                >
                  Online
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-mobile-device"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-2-mobile-device"
                  name="purchaseLocations"
                  type="checkbox"
                  value="mobileDevice"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-2-mobile-device"
                >
                  Mobile Device
                </label>
              </div>
            </fieldset>
          </div>
        </FormElementWrapper>
        <FormElementWrapper
          errorClass="govuk-form-group--error"
          errorId="paymentMethods"
          errors={Array []}
        >
          <div
            className="govuk-form-group"
          >
            <fieldset
              aria-describedby="sop-payment-methods"
              className="govuk-fieldset"
            >
              <p
                className="govuk-body"
                id="sop-payment-methods"
              >
                How can tickets be paid for?
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-cash"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-0-cash"
                  name="paymentMethods"
                  type="checkbox"
                  value="cash"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-0-cash"
                >
                  Cash
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-debit-card"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-1-debit-card"
                  name="paymentMethods"
                  type="checkbox"
                  value="debitCard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-1-debit-card"
                >
                  Debit Card
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-credit-card"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-2-credit-card"
                  name="paymentMethods"
                  type="checkbox"
                  value="creditCard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-2-credit-card"
                >
                  Credit Card
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-mobile-phone"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-3-mobile-phone"
                  name="paymentMethods"
                  type="checkbox"
                  value="mobilePhone"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-3-mobile-phone"
                >
                  Mobile Phone
                </label>
              </div>
            </fieldset>
          </div>
        </FormElementWrapper>
        <FormElementWrapper
          errorClass="govuk-form-group--error"
          errorId="ticketFormats"
          errors={Array []}
        >
          <div
            className="govuk-form-group"
          >
            <fieldset
              aria-describedby="sales-offer-package-ticket-format"
              className="govuk-fieldset"
            >
              <p
                className="govuk-body"
              >
                What format do the tickets come in?
              </p>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-paper-ticket"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-0-paper-ticket"
                  name="ticketFormats"
                  type="checkbox"
                  value="paperTicket"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-0-paper-ticket"
                >
                  Paper Ticket
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-mobile-app"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-1-mobile-app"
                  name="ticketFormats"
                  type="checkbox"
                  value="mobileApp"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-1-mobile-app"
                >
                  Mobile App
                </label>
              </div>
              <div
                className="govuk-checkboxes__item"
                key="checkbox-item-smart-card"
              >
                <input
                  className="govuk-checkboxes__input"
                  defaultChecked={false}
                  id="checkbox-2-smart-card"
                  name="ticketFormats"
                  type="checkbox"
                  value="smartCard"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-2-smart-card"
                >
                  Smart Card
                </label>
              </div>
            </fieldset>
          </div>
        </FormElementWrapper>
      </div>
      <div
        className="govuk-grid-column-one-third"
      >
        <Component />
      </div>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;
